# agent_autotest

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: __init__.py  main.py
backend/agent/: __init__.py  graph.py  jira_creator.py  log_analyzer.py  loop_detector.py  memory.py  state.py  task_registry.py  test_executor.py  test_generator.py
backend/api/: __init__.py  audit.py  auth.py  deps.py  exceptions.py  middleware.py
backend/config/: __init__.py  json_formatter.py  logging_config.py  settings.py
backend/db/: __init__.py  reports.py  test_cases.py
backend/llm/: __init__.py  circuit_breaker.py  client.py  prompts.py  provider.py
backend/models/: __init__.py  analysis.py  jira.py  knowledge.py  page.py  rag.py  test_case.py  testing.py
backend/rag/: __init__.py  embeddings.py  loader.py  page_knowledge.py  pipeline.py  retriever.py  splitter.py  vector_store.py
backend/selenium_driver/: __init__.py  driver.py  reporter.py  session_manager.py
backend/static/: demo.html
backend/utils/: __init__.py  file_utils.py
data/logs/: .gitkeep
docker/: Dockerfile  Dockerfile.frontend  docker-compose.yml
frontend/: app.py
frontend/pages/: agent.py  analysis.py  chat.py  history.py  knowledge.py  test_cases.py  testing.py
frontend/utils/: api.py  state.py  style.py
scripts/: backup_chroma.py  seed_knowledge_base.py
tests/: __init__.py  conftest.py
tests/test_agent/: test_graph_e2e.py  test_loop_detector.py  test_memory.py
tests/test_api/: test_routes.py
(+33 files in other folders)
